# ros2_opencv_demos

./: CMakeLists.txt  README.md  package.xml
launch/: compare_images.py  face_detector_launch.py  object_tracking_launch.py
src/: compare_images.cpp  face_detector.cpp  image_converter.cpp  object_tracking.cpp
